@@ -1360,7 +1360,6 @@
               --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
               --add-opens=java.base/java.lang=ALL-UNNAMED
               --add-opens=java.base/java.util=ALL-UNNAMED
-              --add-exports=java.base/jdk.internal.util.random=ALL-UNNAMED
             </argLine>
           </configuration>
         </plugin>
